# PyDREAM

./: .gitignore  DEVELOPMENT.md  PYDREAM_BUGS_DOCUMENTATION.md  README.md  ci.yml  gemini.md  pyproject.toml  ruff_report.txt  setup.py
docs/: conf.py  index.md  index.rst  installation.md  make.bat  pydream.rst
pydream/: Dream.py  Dream_shared_vars.py  convergence.py  core.py  model.py  parameters.py
pydream/examples/corm/: corm.py  example_sample_corm_with_dream.py
pydream/examples/mixturemodel/: mixturemodel.py
pydream/examples/ndim_gaussian/: dream_ex_ndim_gaussian.py
pydream/examples/robertson/: example_sample_robertson_with_dream.py
pydream/examples/robertson_nopysb/: example_sample_robertson_nopysb_with_dream.py
pydream/tests/: test_dream.py  test_models.py
